Fixed alignment issue. #80

--- a/css/style.css
+++ b/css/style.css
@@ -212,6 +212,15 @@ details.horizontal-tabs-pane .row:nth-child(2n),
   }
 }
 
+.search-aligned .row.p-2.border-bottom {
+  float: right;
+  width: 70%;
+}
+
+.search-aligned .clearfix.field__item img {
+  float: left;
+}
+
 /* Collections Stats box */
 #block-yudl-collection-info-block {
   margin-top: 2%;
